# locan

./: .gitignore  .locan.json  README.md  TODO.md  app.vue  components.json  index.d.ts  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
_common/: constants.ts  (+3 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.butane/: connection.json
src-tauri/.butane/migrations/: state.json
src-tauri/.butane/migrations/20250213_205624544_init/: sqlite_down.sql  sqlite_up.sql
src-tauri/.butane/migrations/20250213_232206584_root_dir/: info.json  sqlite_down.sql  sqlite_up.sql
src-tauri/.butane/migrations/20250216_120509395_scan_results/: ScanFile.table  ScanFileT.table  ScanFileTraCompletionMarker.table  ScanFileTy.table  ScanFileTyp.table  ScanFileType.table  ScanFileTyperaCompletionMarker.table  ScanFileTypraCompletionMarker.table  ScanFileTyraCompletionMarker.table  ScanResult.table  ScanResults.table  info.json  sqlite_down.sql  sqlite_up.sql
src-tauri/.butane/migrations/20250216_124825489_add_scan_file_created_at/: info.json  sqlite_down.sql  sqlite_up.sql
src-tauri/.butane/migrations/20250216_144541871_init/: Project.table  ScanFileType.table  info.json  sqlite_down.sql  sqlite_up.sql
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  butane_migrations.rs  db.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/config/: mod.rs
src-tauri/src/projects/: api.rs  mod.rs  models.rs  types.rs
src-tauri/src/scanner/: api.rs  mod.rs  models.rs  types.rs  utils.rs  walker.rs
src-tauri/src/settings/: api.rs  models.rs
(+197 files in other folders)
