[package]
name = "locan"
version = "0.1.3"
description = "A glorified lines of code analyser"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "locan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
butane = { version = "0.7.0", features = ["sqlite", "sqlite-bundled"] }
chrono = "0.4.39"
uuid = { version = "1.13.1", features = ["v4"] }
tauri-plugin-dialog = "2"
file-format = { version = "0.26.0", features = ["reader-txt"] }
walkdir = "2.5.0"
notify = { version = "8.0.0", features = ["serde"] }
globset = "0.4.15"
regex = "1.11.1"
ignore = "0.4.23"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

